Committed by motsneha

--- a/metadata.properties
+++ b/metadata.properties
@@ -1,4 +1,4 @@
 #
-#Sat Mar 09 09:15:58 IST 2019
-datasourceNames=
-ddlScriptPaths=
+#Sat Mar 09 09:26:01 IST 2019
+datasourceNames=jdbc/Appian
+ddlScriptPaths=vm_vehicle.sql
